fix - Fixed melt animation on mobile

--- a/src/css/base/global.css
+++ b/src/css/base/global.css
@@ -20,6 +20,12 @@ body {
     font-family: 'HelveticaThermal', sans-serif;
 }
 
+@media (max-aspect-ratio: 1/1) {
+    body {
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    }
+}
+
 main {
     height: 100vh;
     overflow-y: scroll;
